# data-engineering-bootcamp

./: .gitignore  GUIDELINES.md  Makefile  README.md  get_exchanges.py  my_script.py  note  transform_exchanges.py
00-bootcamp-project/: Dockerfile  README.md  deb-2023-181e69c62d56-bq.json  deb-2023-eb731094ca12-bq&gcs.json  docker-compose.yaml  docker-compose.yml  ingest_data_to_gcs.py  load  load_data_from_gcs_to_bigquery.py  load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  load_data_to_gcs_then_bq_improve.py  load_table_addresses.py  load_table_events.py  load_table_order_items.py  load_table_orders.py  load_table_products.py  load_table_promos.py  load_table_users.py  main-api.py  main-postgres.py  main-sftp.py  main.py  main_sftp.py  pipeline.conf  pyproject.toml  requirements.txt  test.ipynb  try.py  white-sign-386415-a1aaec096618.json  white-sign-386415-c2017e5e912f.json
00-bootcamp-project-solution/: Dockerfile  demo.py  docker-compose.yaml  load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  load_data_to_gcs_then_bigquery_improved.py  pyproject.toml
00-bootcamp-project-solution/dags/: greenery_addresses_data_pipeline.py  greenery_dbt_dag.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py
00-bootcamp-project-solution/dbt/greenery/: .user.yml  profiles.yml
00-bootcamp-project/dags/: addresses.csv  dbt_greenery.py  events-2021-02-09.csv  events-2021-02-11.csv  events-2021-02-12.csv  greenery_addresses_data_pipeline.py  greenery_dbt_dag.py  greenery_events_data_pipeline.py  greenery_oder_items_data_pipeline.py  greenery_order_items_data_pipeline copy.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py  order-items.csv  order_items.csv  orders-2021-02-11.csv  products.csv  promos.csv  users-2020-01-05.csv  users-2020-01-08.csv  users-2020-01-11.csv  users-2020-01-13.csv  users-2020-01-17.csv  users-2020-01-19.csv  users-2020-01-21.csv  users-2020-02-06.csv  users-2020-02-11.csv  users-2020-02-15.csv  users-2020-02-17.csv  users-2020-02-20.csv  users-2020-02-22.csv  users-2020-02-25.csv  users-2020-03-01.csv  users-2020-03-03.csv  users-2020-03-06.csv  users-2020-03-13.csv  users-2020-03-24.csv  users-2020-03-25.csv  (+87 more)
00-bootcamp-project/data/: addresses.csv  events.csv  order_items.csv  orders.csv  promos.csv  users.csv
00-bootcamp-project/dbt/greenery/: .user.yml  dataengineercafe-analytics-with-dbt-6256eb3a733f.json  dbt_project.yml  profiles.yml
00-bootcamp-project/docker/: Dockerfile-airflow
00-bootcamp-project/labs/: addresses_export  rd.ipynb
00-bootcamp-project/logs/scheduler/: latest
00-bootcamp-project/pyspark/: transform.py  transform_addresses.py  transform_events.py  transform_order_items.py  transform_orders.py  transform_products.py  transform_promos.py  transform_users.py
01-data-engineering-essentials/workshops/data-engineering-lifecycle/: pyproject.toml
01-data-engineering-essentials/workshops/different-file-formats/: coordinates_new.xml  homes.json  homes.orc  main.py  pyproject.toml
01-data-warehouse-data-governance-and-data-security/examples/loading-data-to-bigquery-from-local/: 2020-12-07-users.csv  pyproject.toml
01-introduction-to-data-engineering/examples/extracting-data-from-api-and-writing-data-to-csv/: main.py  pyproject.toml
01-introduction-to-data-engineering/workshops/different-file-formats/: homes.parquet  main.py  pyproject.toml  users.avro
02-data-warehouse-and-google-bigquery/workshops/: README.md  load_data_to_bigquery.py  load_data_to_bigquery_improve.py  load_table_from_csv.py  pyproject.toml
02-data-warehouse-data-governance-and-data-security/examples/loading-data-to-bigquery-from-local/: load_table_from_csv.py  load_table_from_csv_with_specific_partition.py  load_table_from_dataframe.py  pyproject.toml  users.csv
03-data-lake-and-big-data-processing/examples/uploading-gcs-to-bigquery/: README.md  main.py  pyproject.toml
03-data-lake-and-big-data-processing/examples/uploading-to-gcs/: events.avro  events.parquet  main.py  pyproject.toml
03-data-lake-and-big-data-processing/iceberg/: .pyiceberg.yaml  Makefile  README.md  delete_gcs_folders.py  main.py  main_gcs.py  pyproject.toml
03-data-lake-with-google-cloud-storage/examples/uploading-gcs-to-bigquery/: main.py  pyproject.toml
05-analytics-engineering/workshop/: .gitignore  Makefile  README.md  analysis-template.md  docker-compose.yml  greenery-dbdiagram.txt  pyproject.toml  requirements.txt
05-analytics-engineering/workshop/csv_files/: mushrooms.csv
05-analytics-engineering/workshop/greenery/: dbt_project.yml  packages.yml  profiles.yml
05-analytics-engineering/workshop/snapshots/: users_snopshot.sql
06-data-infrastructure-for-gen-ai-app/: README.md  ai_assistant_for_course_recommendations.py  cosine_similarity.py  embeddings.py  embeddings_and_cosine_similarity.py  llm_api_with_context_enhanced_prompts_textual.py  llm_api_with_context_enhanced_prompts_transactional.py  llm_api_with_standalone_prompts.py  play_with_gemini.py  pyproject.toml  similarity_search.py  store_embeddings_in_bigquery.py
06-data-infrastructure-for-gen-ai-app/play-with-sentence-transformers/: app.py  pyproject.toml
06-data-infrastructure-for-gen-ai-app/qna_app/: app.py  pyproject.toml
07-end-to-end-project/: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
07-end-to-end-project/csv_files/: operating_companies.csv
07-end-to-end-project/docker/: Dockerfile-airflow
07-end-to-end-project/networkrail_consumer/: README.md  confluent.conf  consumer.py  pyproject.toml
07-end-to-end-project/networkrail_producer/: Makefile  README.md  get_networkrail_movements.py  networkrail.conf  pyproject.toml
07-end-to-end-project/pyspark/: transform.py
project/: pyproject.toml
venv-vs-poetry/my_project/: main.py  pyproject.toml
(+308 files in other folders)
