[tool.poetry]
name = "06-end-to-end-project"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]
readme = "README.md"
packages = [{include = "06_end_to_end_project"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "1.8.4"
dbt-bigquery = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
