[tool.poetry]
name = "07-end-to-end-project"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]
readme = "README.md"
packages = [{include = "07_end_to_end_project"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.9.6"
dbt-bigquery = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
