[tool.poetry]
name = "workshop"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.7.9"
dbt-postgres = "^1.7.9"
dbt-bigquery = "^1.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
