[project]
name = "qna-app"
version = "0.1.0"
description = ""
authors = [
    {name = "zkan",email = "kan@odds.team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "google-genai (>=1.25.0,<2.0.0)",
    "google-cloud-bigquery (>=3.34.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
