[tool.poetry]
name = "different-file-formats"
version = "0.1.0"
description = ""
authors = ["Kan Ouivirach <zkan.cs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.1.1"
pyarrow = "^17.0.0"
avro = "^1.12.0"
lxml = "^5.3.0"
parquet-tools = "^0.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
