[tool.poetry]
name = "uploading-gcs-to-bigquery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uploading_gcs_to_bigquery"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-storage = "^2.18.2"
google-cloud-bigquery = "^3.25.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
